--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -238,7 +238,7 @@
     <%= javascript_include_tag "ifepm.dashboard.template.js" %>
     <%= javascript_include_tag "ifepm.dashboard.main.js" %>
 
-    <%#= javascript_include_tag "high_chart_template.js" %>
+    <%= javascript_include_tag "high_chart_template.js" %>
     <%#= javascript_include_tag "high_chart_theme.js" %>
     <%#= javascript_include_tag "Dashboard-add.js" %>
     <%= javascript_include_tag "Dashboard-init.js" %>
